# CSnake

./: CMakeLists.txt  README.md
include/: asset.h  food.h  snake.h  window.h
src/: asset.c  main.c  snake.h
